2001-12-11  Mark Mitchell  <mark@codesourcery.com>

	* Makefile.in (SCRIPTS): Generate files with DOS line-ending
	convention under Windows.
	* doc/manual/introduction.xml: Expand.
	* doc/manual/test-tour.xml: Explain that Cygwin will not work with
	QMTest.

2001-12-10  Mark Mitchell  <mark@codesourcery.com>

	* qm/attachment.py (TemporaryAttachmentStore.HandleUploadRequest):
	Add type attribute to <script>.
	* qm/web.py (DtmlPage.common_javascript): New variable.
	(DtmlPage.GenerateXMLHeader): New method.
	(DtmlPage.GenerateEndBody): Generate correctl XHTML.
	(DtmlPage.GenerateStartScript): New method.
	(DtmlPage.GenerateEndScript): Likewise.
	(WebRequest): Update extensions_map to map .js to text/javascript.
	(WebServer.__init__): Register "/common.js".
	(WebServer.TranslateRequest): Do not add a trailing '/' unless
	there is going to be something after the '/'.
	(make_set_control): Generate correct XHTML.
	(encode_set_control_contents): Likewise.
	(make_properties_control): Likewise.
	(make_help_link_html): Likewise.
	(make_popup_dialog): Likewise.
	(make_choose_control): Likewise.
	(_common_javascript): Remove.
	(_initialize_module): Likewise.
	* qm/test/web/web.py (QMTestPage.GenerateStartBody): Generate correct
	XHTML.
	* share/dtml: Likewise, for all files.
	* share/web/common.js (property_add_or_change): Change
	documentation text.
	(label_is_valid): Allow periods.
	* share/web/stylesheets/qm.css: Make sure it is valid CSS.
	
	* standard.mk.in (all): Remove doc.
	(doc): Rename to ...
	(doc-all): ... this.
	* doc/manual/Makefile.in (all): Depend on doc-all.
	* doc/manual/test-tour.xml: Clarify.
	* qm/platform_unix.py (find_in_path): Remove.
	(open_in_browser): Do not use it.
	* qm/web.py (WebServer.__init__): Point '/' at self._HandleRoot.
	(WebServer._HandleRoot): New method.
	(_handle_root): Remove.
	* qm/test/result.py (Result.AsStructuredText): Sort annotations.
	* qm/test/classes/python.py (ExecTest.Run): Give the expression
	for a failing test.